GNSS_RX_ZedMB.sdk/.metadata/.plugins/org.eclipse.cdt.ui/freertos10_xilinx_bsp_0_xuartlite_intr_example_1.build.log
23:55:55 **** Build of configuration Debug for project freertos10_xilinx_bsp_0_xuartlite_intr_example_1 ****
make all 
'Building file: ../src/xuartlite_intr_example.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xuartlite_intr_example.o" -I../../freertos10_xilinx_bsp_0/microblaze_0/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v10.0 -mno-xl-soft-mul -mxl-multiply-high -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/xuartlite_intr_example.d" -MT"src/xuartlite_intr_example.o" -o "src/xuartlite_intr_example.o" "../src/xuartlite_intr_example.c"
../src/xuartlite_intr_example.c: In function 'SetupInterruptSystem':
../src/xuartlite_intr_example.c:78:33: error: 'XPAR_INTC_0_UARTLITE_0_VEC_ID' undeclared (first use in this function); did you mean 'XPAR_INTC_0_TMRCTR_0_VEC_ID'?
 #define UARTLITE_INT_IRQ_ID     XPAR_INTC_0_UARTLITE_0_VEC_ID
                                 ^
../src/xuartlite_intr_example.c:363:47: note: in expansion of macro 'UARTLITE_INT_IRQ_ID'
  Status = XIntc_Connect(&InterruptController, UARTLITE_INT_IRQ_ID,
                                               ^~~~~~~~~~~~~~~~~~~
../src/xuartlite_intr_example.c:78:33: note: each undeclared identifier is reported only once for each function it appears in
 #define UARTLITE_INT_IRQ_ID     XPAR_INTC_0_UARTLITE_0_VEC_ID
                                 ^
../src/xuartlite_intr_example.c:363:47: note: in expansion of macro 'UARTLITE_INT_IRQ_ID'
  Status = XIntc_Connect(&InterruptController, UARTLITE_INT_IRQ_ID,
                                               ^~~~~~~~~~~~~~~~~~~
make: *** [src/xuartlite_intr_example.o] Error 1

23:55:56 Build Finished (took 700ms)

